objects/CN_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>CN_CS_Group_Email__c</fullName>
        <label>CS Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CN_Brand__c.CN_Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.CN_Customer_Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>CN_Brand__c.CN_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_Brand__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CN_Group__c.CN_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_Group__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_End_Date__c</fullName>
        <label>End Date(Planned End Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Is_Active__c</fullName>
        <formula>ISPICKVAL(CN_Status__c  , &quot;Published&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Last_Published_Time__c</fullName>
        <label>Last Published Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_MKT_Group_Email__c</fullName>
        <label>MKT Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>CASE(
TEXT(CN_Status__c),
&quot;Planned&quot;, $Label.CN_PleaseConfirm_Value_BackToPlanned,
&quot;Ready&quot;, $Label.CN_PleaseConfirm_Value_ReadyForPublish,
&quot;Published&quot;, $Label.CN_PleaseConfirm_Value_AlreadyPublished,
&quot;Aborted&quot;,  $Label.CN_PleaseConfirm_Abort,
$Label.CN_PleaseConfirm_Value_AlreadyPublished
)</formula>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Line_Item_Count__c</fullName>
        <label>Promotion Line Item Count</label>
        <summaryForeignKey>CN_Promotion_Line_Item__c.CN_Promotion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Member_Count__c</fullName>
        <label>Promotion Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Bundle sells</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Gifting</fullName>
                </value>
                <value>
                    <fullName>买满就减</fullName>
                    <isActive>false</isActive>
                    <label>买满就减</label>
                </value>
                <value>
                    <fullName>买送</fullName>
                    <isActive>false</isActive>
                    <label>买送</label>
                </value>
                <value>
                    <fullName>会员促销</fullName>
                    <isActive>false</isActive>
                    <label>会员促销</label>
                </value>
                <value>
                    <fullName>免费试吃</fullName>
                    <isActive>false</isActive>
                    <label>免费试吃</label>
                </value>
                <value>
                    <fullName>免费送</fullName>
                    <isActive>false</isActive>
                    <label>免费送</label>
                </value>
                <value>
                    <fullName>凭**换取</fullName>
                    <isActive>false</isActive>
                    <label>凭**换取</label>
                </value>
                <value>
                    <fullName>加***元多一件</fullName>
                    <isActive>false</isActive>
                    <label>加***元多一件</label>
                </value>
                <value>
                    <fullName>打折</fullName>
                    <isActive>false</isActive>
                    <label>打折</label>
                </value>
                <value>
                    <fullName>折上折</fullName>
                    <isActive>false</isActive>
                    <label>折上折</label>
                </value>
                <value>
                    <fullName>抽奖</fullName>
                    <isActive>false</isActive>
                    <label>抽奖</label>
                </value>
                <value>
                    <fullName>换购</fullName>
                    <isActive>false</isActive>
                    <label>换购</label>
                </value>
                <value>
                    <fullName>特价</fullName>
                    <isActive>false</isActive>
                    <label>特价</label>
                </value>
                <value>
                    <fullName>秒杀</fullName>
                    <isActive>false</isActive>
                    <label>秒杀</label>
                </value>
                <value>
                    <fullName>送券</fullName>
                    <isActive>false</isActive>
                    <label>送券</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K010</fullName>
                    <label>K010-ShangHai</label>
                </value>
                <value>
                    <fullName>K020</fullName>
                    <label>K020-BeiJing</label>
                </value>
                <value>
                    <fullName>K030</fullName>
                    <label>K030-ShenZhen</label>
                </value>
                <value>
                    <fullName>K040</fullName>
                    <label>K040-GuangZhou</label>
                </value>
                <value>
                    <fullName>K050</fullName>
                    <label>K050-ChengDu</label>
                </value>
                <value>
                    <fullName>K060</fullName>
                    <label>K060-DaLian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Start_Date__c</fullName>
        <label>Start Date(Planned Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Retailor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Promotion_Type__c</columns>
        <columns>CN_Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CN_Customer_Brand__c</columns>
        <columns>CN_Start_Date__c</columns>
        <columns>CN_End_Date__c</columns>
        <columns>CN_Last_Published_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>CN_Promotion</fullName>
        <active>true</active>
        <label>CN_Promotion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Item_Count_When_Ready</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Status__c ),
 ISPICKVAL(CN_Status__c , &quot;Ready&quot;) ,
 CN_Promotion_Line_Item_Count__c = 0
)</errorConditionFormula>
        <errorMessage>At least one promotion line item is needed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Start_Date_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
CN_End_Date__c &lt; CN_Start_Date__c 
)</errorConditionFormula>
        <errorDisplayField>CN_Start_Date__c</errorDisplayField>
        <errorMessage>End Date must greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>